# sourcegraph

./: .bazelignore  BUILD.bazel  CHANGELOG.md  WORKSPACE  babel.config.js  package.json  pnpm-lock.yaml
client/branded/: BUILD.bazel
client/branded/src/search-ui/input/experimental/: CodeMirrorQueryInputWrapper.tsx
client/common/src/types/highlight.js/lib/: core.d.ts
client/plugin-backstage/: package.json
client/shared/: BUILD.bazel
client/web/: BUILD.bazel  webpack.bazel.config.js
client/web/dev/: BUILD.bazel
client/web/src/enterprise/codeintel/configuration/pages/: CodeIntelConfigurationPage.tsx
client/web/src/enterprise/codeintel/indexes/pages/: CodeIntelIndexPage.tsx  CodeIntelIndexesPage.tsx
client/web/src/enterprise/codeintel/uploads/pages/: CodeIntelUploadPage.tsx
client/web/src/enterprise/site-admin/: WebhookCreateUpdatePage.tsx  routes.tsx
client/web/src/search/home/: SearchPageInput.tsx
client/web/src/site-admin/: routes.tsx
client/web/src/site-admin/analytics/AnalyticsOverviewPage/: index.tsx
cmd/frontend/graphqlbackend/: graphqlbackend.go  site_admin.go
cmd/frontend/internal/cli/: serve_cmd.go
cmd/server/: Dockerfile
dev/: babel.bzl  defs.bzl  sass.bzl
docker-images/prometheus/: Dockerfile
enterprise/cmd/frontend/internal/auth/sourcegraphoperator/: middleware.go
enterprise/cmd/frontend/internal/licensing/enforcement/: users.go
enterprise/cmd/frontend/shared/: shared.go
enterprise/internal/database/: integration_test.go  mocks_temp.go  perms_store.go  perms_store_test.go
internal/database/: database.go  mocks_temp.go  permissions.go  roles_test.go  user_roles.go
internal/types/: types.go
